--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,21 @@ cdb = "0.6.0"
 chrono = "0.4.31"
 docopt = "1.1.1"
 futures = "0.3.29"
+hex = "0.4.3"
+hmac = "0.12.1"
 hyper = "0.14.27"
 hyperlocal = "0.8.0"
 md5 = "0.7.0"
+regex = "1.10.2"
+ring = "0.17.5"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
 sha1 = "0.10.6"
+sha2 = "0.10.8"
 socket2 = "0.5.5"
 tokio = { version = "1.33.0", features = ["full"] }
+url = "2.4.1"
+urlencoding = "2.1.3"
 
 [[bin]]
 name = "rust-app"
